<resources>
    <string name="app_name">Nouzze</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="image_contentDescription">imageDescription</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="appUsageTime">1hr 20min</string>
    <string name="recommendFriend">Recommend to friends</string>
    <string name="settings">Settings</string>
    <string name="add_a_new_address">No Address Saved</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="dialogMessage">Message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedback_message">Exciting news! 🚀 \nIn our next release, we\'ll provide personalized feedback on your app usage to boost your productivity. Stay tuned for the update and earn even more rewards! \nThanks for being part of our community!</string>
</resources>