<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Firebase.SignInActivity">


    <EditText
        android:id="@+id/loginEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/loginPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/doNotHaveAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_a_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <ProgressBar
        android:id="@+id/progressBarButton"
        style="?android:attr/progressBarStyle"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:visibility="gone"
        tools:visibility="visible"
         />

</LinearLayout>