<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:id="@+id/listItemLayout"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/app_icon_image"
            android:layout_width="@dimen/App_Icon_Image_Size"
            android:layout_height="@dimen/App_Icon_Image_Size"
            app:civ_border_width="@dimen/nav_image_circular_border_width"
            android:contentDescription="@string/image_contentDescription"
            android:src="@drawable/appicon"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="15dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whatsapp"
                android:textSize="15sp"
                android:textColor="@color/textColor"
                />

            <TextView
                android:id="@+id/usage_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appUsageTime"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginTop="5dp"
        android:background="#edede9"
        />

</LinearLayout>