<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/customToolBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:titleTextColor="@color/white"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardElevation="@dimen/card_view_elevation"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/My_Profile_Activity_Picture_Size"
                android:layout_height="@dimen/My_Profile_Activity_Picture_Size"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                app:civ_border_width="@dimen/nav_image_circular_border_width"
                android:contentDescription="@string/image_contentDescription"
                android:src="@drawable/ic_user_holder"
                android:layout_gravity="center_horizontal"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/profile_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="25dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/profile_email_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="25dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phoneNumber_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/btn_paddingTopBottom"
                android:paddingBottom="@dimen/btn_paddingTopBottom"
                android:background="@drawable/custom_button_background_profile_page"
                android:layout_marginStart="@dimen/intro_text_marginStartEnd"
                android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
                >
                <TextView
                    android:id="@+id/update_text_view_on_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/btn_marginStartEnd"
                    android:layout_marginEnd="@dimen/btn_marginStartEnd"
                    />
                <ProgressBar
                    android:id="@+id/progress_bar_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>