<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        android:id="@+id/include_app_bar_layout"
        layout="@layout/app_bar_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/nav_draawer_header_include"
            layout="@layout/nav_header_drawer" />

        <LinearLayout
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_contentDescription"
                android:src="@drawable/share"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommendFriend"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_contentDescription"
                android:src="@drawable/settings"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_contentDescription"
                android:src="@drawable/help"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Help"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                />
        </LinearLayout>

    </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>